--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
-    "dbt-bigquery (>=1.10.3,<2.0.0)"
+    "dbt-bigquery (>=1.10.3,<2.0.0)",
+    "dbt-core (>=1.10.15,<2.0.0)"
 ]
 
 
