Produção rodado local

--- a/cryptostream/dbt_project.yml
+++ b/cryptostream/dbt_project.yml
@@ -33,13 +33,13 @@ models:
   cryptostream:
     # Config indicated by + and applies to all files under models/example/
     staging:
-      +schema: cryptostream_silver
+      +schema: crypto_data_silver
       +materialized: view
 
     silver:
-      +schema: cryptostream_silver
+      +schema: crypto_data_silver
       +materialized: incremental
 
     gold:
-      +schema: cryptostream_gold
+      +schema: crypto_data_gold
       +materialized: table
