fix: resolvendo conflito do gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,52 @@ log.txt
 
 __pycache__/
 *.pyc
+
+target/
+logs/
+dbt_modules/          # legado (alguns projetos antigos usam)
+dbt_packages/         # baixado via `dbt deps`
+
+# --------------------
+# Python / Poetry
+# --------------------
+.venv/
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+dist/
+build/
+.poetry/
+pip-wheel-metadata/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+# --------------------
+# Jupyter / notebooks
+# --------------------
+.ipynb_checkpoints/
+
+# --------------------
+# OS / editores
+# --------------------
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# --------------------
+# Secrets / credenciais / configs locais
+# --------------------
+.env.*
+*.env
+profiles.yml          # NÃO versionar se tiver credenciais
+**/*service-account*.json
+**/*gcp-key*.json
+**/*credentials*.json
+*.pem
+*.key
