--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ authors = [
     {name = "Lucas Braga",email = "lucassudbrackb@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 
 dependencies = [
     "dbt-bigquery (>=1.10.3,<2.0.0)",
-    "dbt-core (>=1.10.15,<2.0.0)"
+    "dbt-core (>=1.10.15,<2.0.0)",
+    "apache-airflow (>=3.1.4,<4.0.0)"
 ]
 
 
